@@ -4,6 +4,7 @@ from scenery import scenery
 from input import input
 from character import Person
 import termios
+from check import *
 import subprocess as sp
 import time
 import tty
@@ -30,7 +31,9 @@ if __name__ == "__main__":
         player.lives) + "       TIME LEFT= " + str(player.time)
     game_map = scenery(player, rows, columns, frames)
     start_time = time.time()
+
     while(1):
+        
         if input.kbhit():
             val = input.getch()
             if(val == 'q'):
@@ -42,20 +45,28 @@ if __name__ == "__main__":
 
         player.check(world_x, world_y, offset)
         game_map.object(player)
+        # to update score lives and time everytime
+        player.info = "SCORE = " + str(player.score) + "        LIVES = " + str(
+        player.lives) + "       TIME LEFT= " + str(player.time)
+        for val in range(columns):
+            if(len(player.info) > val):
+                    game_map.grid[0][val] = Fore.YELLOW + player.info[val]
         output_str = ""
         for row in range(rows):
             for col in range(columns):
                 if(row == 0):
+                    # to not move score lives and time line
                     output_str += game_map.grid[row][col]
                 else:
                     output_str += game_map.grid[row][offset + col]
             output_str += '\n'
 
+        check_coins(game_map,player)
         print('\033[H' + output_str)
         game_map.clear(player)
         tm = time.time()
         diff = tm - start_time
-        if diff > 0.03:
+        if diff > 0.04:
             offset += 1
             # done so that with screen moving back player's position should remain same
             player.move('d')
@@ -64,7 +75,7 @@ if __name__ == "__main__":
         # bring cursor to start instead of clearing the full screen
         sys.stdin.flush()
         sys.stdout.flush()
-        # time.sleep(0.03)
+        time.sleep(0.03)
 
     input.show_cursor()
     termios.tcsetattr(sys.stdin, termios.TCSADRAIN, orig_settings)
